...
    <item
        android:id="@+id/page_map"
        android:enabled="true"
        android:icon="@drawable/ic_map"
        android:title="Map"/>
    <item
        android:id="@+id/page_createMoodEvent"
        android:enabled="true"
        android:icon="@drawable/ic_add_circle_outline"
        android:title="Add"/>
    <item
        android:id="@+id/page_myHistory"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:title="History"/>
    <item
        android:id="@+id/page_myProfile"
        android:enabled="true"
...
