...
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">

        <include
            android:id="@+id/toggle_happy"
            layout="@layout/emotion_picker_toggle"
            android:layout_width="90dp"
            android:layout_height="wrap_content" />

        <include
            android:id="@+id/toggle_sadness"
            layout="@layout/emotion_picker_toggle"
            android:layout_width="90dp"
            android:layout_height="wrap_content" />

        <include
            android:id="@+id/toggle_shame"
...
