...
            android:id="@+id/layout_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Reason">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emotion_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/timestamp_layout"
...
                app:icon="@drawable/ic_lock"
                android:text="Private" />
        </com.google.android.material.button.MaterialButtonToggleGroup>


        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
...
